# render

./: .gitignore  CONTRIBUTING.md  EVALUATION.md  LICENSE  PLAN.md  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: geoblender.yaml  openai.yaml
architectural-building-to-3d/: SKILL.md
architectural-building-to-3d/agents/: openai.yaml
architectural-building-to-3d/references/: ARCHITECTURAL_CONTRACT.md
blender-mcp-loop/: SKILL.md
blender-mcp-loop/agents/: geoblender.yaml  openai.yaml
docs/: MCP_LOOP.md  OSM2WORLD.md  REALWORLD_TECHNIQUES.md  SOURCES_LICENSES.md  URBAN_SYSTEM.md
football-stadium-to-3d/: SKILL.md
football-stadium-to-3d/agents/: openai.yaml
highway-to-3d/: SKILL.md
highway-to-3d/agents/: openai.yaml
hospital-to-3d/: SKILL.md
monuments-public-art-to-3d/: SKILL.md
residential-neighborhood-to-3d/: SKILL.md
scripts/: architectural_detail.py  blender_build.py  blocks_build.py  blocks_eval.py  blocks_pipeline.py  citycache.py  citycamera.py  cityconfig.py  citylandmarks.py  citylog.py  cityprofiles.py  cityroofs.py  fetch_3dtiles.py  get_textures.py  highway_detail.py  hospital_detail.py  import_3dtiles.py  live_build.py  loop_engineering.py  mcp_loop.py  osm2world_adapter.py  place_to_3d.py  render_view.py  stadium_detail.py  urban_detail.py  world_scene.py
signage-wayfinding-to-3d/: SKILL.md
streetscape-infrastructure-to-3d/: SKILL.md
tests/: test_adapter.py  test_building_detail.py  test_core.py  test_loop_engineering.py  test_mcp_loop.py  test_packaging.py  test_urban_detail.py
urban-amenities-to-3d/: SKILL.md
(+36 files in other folders)
