[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoblender"
version = "0.1.0"
description = "Reconstruct a real-world area from OSM/Overpass as a Blender-ready 3D scene."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["requests"]

[project.optional-dependencies]
yaml = ["PyYAML"]

[project.scripts]
place2blender = "place_to_3d:main"
maps-to-3d = "blocks_pipeline:main"

[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = [
    "place_to_3d",
    "blocks_pipeline",
    "blocks_build",
    "blocks_eval",
    "architectural_detail",
    "hospital_detail",
    "highway_detail",
    "stadium_detail",
    "urban_detail",
    "blender_build",
    "world_scene",
    "citycamera",
    "citylandmarks",
    "cityprofiles",
    "cityroofs",
    "cityconfig",
    "citylog",
    "citycache",
]
